--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-streamlit
-pandas
-Image
-requests
-plotly.express
-make_subplots
-joblib
-f_oneway
-Decimal
+streamlit==1.14.0
+pandas==1.5.0
+Image==9.2.0
+requests==2.28.1
+plotly==5.11.0
+joblib==1.1.0
+scipy==1.9.2
